--- a/src/com/outtatech/client/MainGameScreen.form
+++ b/src/com/outtatech/client/MainGameScreen.form
@@ -137,6 +137,7 @@
                       </Group>
                   </Group>
                   <Component id="jScrollPane2" alignment="1" min="-2" pref="422" max="-2" attributes="0"/>
+                  <Component id="leaveGameButton" alignment="1" min="-2" pref="109" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -192,9 +193,8 @@
                   <Component id="jPanel14" min="-2" max="-2" attributes="0"/>
                   <Component id="jPanel15" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+              <EmptySpace min="35" pref="35" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane2" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jCheckBox1" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -245,9 +245,11 @@
                       <Component id="jCheckBox11" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jCheckBox12" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="19" max="32767" attributes="0"/>
                   </Group>
+                  <Component id="jScrollPane2" alignment="1" min="-2" pref="325" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace pref="27" max="32767" attributes="0"/>
+              <Component id="leaveGameButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -784,6 +786,14 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="jCheckBox21"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="leaveGameButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Leave Game"/>
+      </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="leaveGameButtonMouseClicked"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
