ads end turn to gui

--- a/src/com/outtatech/client/MainGameScreen.form
+++ b/src/com/outtatech/client/MainGameScreen.form
@@ -116,6 +116,8 @@
                                       <Component id="hintImage4" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Component id="hintImage5" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                      <Component id="hintImage6" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -192,6 +194,7 @@
                   <Component id="hintImage3" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="hintImage4" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="hintImage5" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="hintImage6" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -553,6 +556,11 @@
     <Component class="javax.swing.JLabel" name="hintImage5">
       <Properties>
         <Property name="text" type="java.lang.String" value="HC5"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="hintImage6">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="HC6"/>
       </Properties>
     </Component>
   </SubComponents>
